Fixed up project labels and made them compatible with dark mode

--- a/src/content/github/super-labels/projects/super-labels.less
+++ b/src/content/github/super-labels/projects/super-labels.less
@@ -1,30 +1,28 @@
 /* Projects Page: Super-labels display adjustments
 ============================================================================================ */
-@import '../super-labels.less';
+@import "../super-labels.less";
 
 [github-projects-plus] {
-
   .js-project-container {
-
     /* Super-labels
     ============================================================================================ */
     .issue-card {
       position: relative !important;
 
-      .labels {
+      & > div:last-child > div > div > span:last-of-type {
         position: initial !important;
 
         // Styling for all labels (special or not)
-        .issue-card { }
-    
+        .issue-card {
+        }
+
         /* Super-labels (Type labels)
         ============================================================================================ */
-        
+
         // Compose selector
-        @projects-type-selector-name:        ~'.issue-card-label[data-card-filter ^= "label:#"]';   // Name starts with "#"
-        @projects-type-selector-name-legacy: ~'.issue-card-label[data-card-filter ^= "label:\"#"]'; // Name starts with "#" (legacy enterprise support)
-        @projects-type-selector-description: ~'.issue-card-label[aria-label *= "[type]"]';          // Description contains "[type]"
-        
+        @projects-type-selector-name: ~'[data-card-filter ^= "label:#"]'; // Name starts with "#"
+        @projects-type-selector-description: ~'[title *= "[type]"]'; // Description contains "[type]"
+
         // Type label, basic styling + :hover state
         .projects-type-label(@i) {
           .super-type-label(@i);
@@ -36,27 +34,22 @@
 
         // Position based on number of preceding elements matching same selector (max 5 labels)
         @{projects-type-selector-name},
-        @{projects-type-selector-name-legacy},
         @{projects-type-selector-description} {
           .projects-type-label(0);
 
           & ~ @{projects-type-selector-name},
-          & ~ @{projects-type-selector-name-legacy},
           & ~ @{projects-type-selector-description} {
             .projects-type-label(1);
 
             & ~ @{projects-type-selector-name},
-            & ~ @{projects-type-selector-name-legacy},
             & ~ @{projects-type-selector-description} {
               .projects-type-label(2);
 
               & ~ @{projects-type-selector-name},
-              & ~ @{projects-type-selector-name-legacy},
               & ~ @{projects-type-selector-description} {
                 .projects-type-label(3);
 
                 & ~ @{projects-type-selector-name},
-                & ~ @{projects-type-selector-name-legacy},
                 & ~ @{projects-type-selector-description} {
                   .super-label-default();
                 }
@@ -68,9 +61,8 @@
         /* Super-labels (Special labels)
         ============================================================================================ */
         // Compose selector
-        @projects-special-selector-name:        ~'.issue-card-label[data-card-filter ^= "label:@"]';    // Name starts with "@"
-        @projects-special-selector-name-legacy: ~'.issue-card-label[data-card-filter ^= "label:\"@"]';  // Name starts with "@" (legacy enterprise support)
-        @projects-special-selector-description: ~'.issue-card-label[aria-label *= "[special]"]';        // Description contains "[special]"
+        @projects-special-selector-name: ~'[data-card-filter ^= "label:@"]'; // Name starts with "@"
+        @projects-special-selector-description: ~'[title *= "[special]"]'; // Description contains "[special]"
 
         // Special label, basic styling + :hover state
         .projects-special-label(@i) {
@@ -79,27 +71,22 @@
 
         // Position based on number of preceding elements matching same selector (max 5 labels)
         @{projects-special-selector-name},
-        @{projects-special-selector-name-legacy},
         @{projects-special-selector-description} {
           .projects-special-label(0);
 
           & ~ @{projects-special-selector-name},
-          & ~ @{projects-special-selector-name-legacy},
           & ~ @{projects-special-selector-description} {
             .projects-special-label(1);
 
             & ~ @{projects-special-selector-name},
-            & ~ @{projects-special-selector-name-legacy},
             & ~ @{projects-special-selector-description} {
               .projects-special-label(2);
 
               & ~ @{projects-special-selector-name},
-              & ~ @{projects-special-selector-name-legacy},
               & ~ @{projects-special-selector-description} {
                 .projects-special-label(3);
 
                 & ~ @{projects-special-selector-name},
-                & ~ @{projects-special-selector-name-legacy},
                 & ~ @{projects-special-selector-description} {
                   .super-label-default();
                 }
@@ -107,11 +94,7 @@
             }
           }
         }
-
       }
-
     }
-
   }
-
 }
